--- a/content/01.abstract.md
+++ b/content/01.abstract.md
@@ -7,10 +7,11 @@ Descripción de los productos del trabajo de arquitectura de la Fase 2, proyecto
 ##  Control de Cambios {.page_break_before}
 | Tema           | $PROYECTO $PROY_DESCR      |
 |----------------|----------------------------|
-| Palabras clave | SIU, Softgic, PGN, Análisis de brecha, GAP, Comparativa              |
+| Palabras clave | SIU, Softgic, PGN, Análisis de brecha, GAP, Comparativa |
 | Autor          |                            |
 | Fuente         |                            |
-| Versión        | 1.$COMMIT del $FECHA_COMPILACION |
+| Versión        |                            |
+$HISTORIAMD
 | Vínculos       | [N003a Vista Segmento PGN SIU](N03a%a20Vsta%20aSegenta%20SOA%20PGN.md) |
 
 <br>
