--- a/content/02n.a4.pgnarqinfra.md
+++ b/content/02n.a4.pgnarqinfra.md
@@ -1,12 +1,12 @@
 # Arquitectura de Software: Infraestructura
 * [Diagrama de Infraestructura de TI](#diagrama-de-infraestructura-de-ti)
 	* [Migracion.3. Infraestructura](#migracion.3.-infraestructura)
-	* [Lineabase.1a.SIU Componentes. Infraestrcutura](#lineabase.1a.siu-componentes.-infraestrcutura)
-	* [Lineabase.0.SIU Aplicación. Física](#lineabase.0.siu-aplicación.-física)
-	* [Seguridad.2. Lineabase.0.SIU Aplicación](#seguridad.2.-lineabase.0.siu-aplicación)
+	* [Lineabase.1a.SUI Componentes. Infraestrcutura](#lineabase.1a.SUI-componentes.-infraestrcutura)
+	* [Lineabase.0.SUI Aplicación. Física](#lineabase.0.SUI-aplicación.-física)
+	* [Seguridad.2. Lineabase.0.SUI Aplicación](#seguridad.2.-lineabase.0.SUI-aplicación)
 	* [Migracion.6. Migración de datos](#migracion.6.-migración-de-datos)
 * [Documento sobre especificaciones técnicas de infraestructura TI](#documento-sobre-especificaciones-técnicas-de-infraestructura-ti)
-	* [Lineabase.0.SIU Aplicación. Física](#lineabase.0.siu-aplicación.-física)
+	* [Lineabase.0.SUI Aplicación. Física](#lineabase.0.SUI-aplicación.-física)
 
 
 <div style="page-break-before: always;"></div>
@@ -136,8 +136,8 @@ Identificación de los ítems de infraestructura tecnológica, nodos, redes, có
 
 <br>
 
-## Lineabase.1a.SIU Componentes. Infraestrcutura
-![Vista. Lineabase.1a.SIU Componentes. Infraestrcutura](images/Lineabase.1a.SIUComponentes.Infraestrcutura.png){#fig:Lineabase.1a.SIUComponentes.Infraestrcutura width=}
+## Lineabase.1a.SUI Componentes. Infraestrcutura
+![Vista. Lineabase.1a.SUI Componentes. Infraestrcutura](images/Lineabase.1a.SIUComponentes.Infraestrcutura.png){#fig:Lineabase.1a.SIUComponentes.Infraestrcutura width=}
 
 Relación de dependencias de infraestructura con los servicios que integran el modelo de aplicación de SUI Migrado, 2023.
 
@@ -185,7 +185,7 @@ Relación de dependencias de infraestructura con los servicios que integran el m
 |**Proveedores contenidos**|application-service||*brecha:* 100<br>|
 |**Mensaje: JSON**|data-object|||
 |**Infraestructura SUI**|grouping|Soporte de infraestructura a los componentes del SUI Migración. Servidores y ambientes de cómputo para la ejecución del software base de los componentes misionales del SUI de PGN.<br>||
-|**PGN SIU**|grouping|Esta vista presenta y describe los ítems de arquitectura del SUI Migrado que requieren licenciamiento para operar y cumplir con el objetivo principal de la migración que es la centralización de los conceptos misionales: concentrar los conceptos misionales en componentes aislados.<br>Los elementos realtados en verde en el diagrama incurren en una renta, bien sea, o por consumo de cómputo en la nube de Microsoft, o por el costo de una licencia de uso. Por ejemplo, en el caso del servidor de reporte del SUI Migrado, es requerida una licencia de uso Power BI Pro, de pago mensual.<br>||
+|**PGN SUI**|grouping|Esta vista presenta y describe los ítems de arquitectura del SUI Migrado que requieren licenciamiento para operar y cumplir con el objetivo principal de la migración que es la centralización de los conceptos misionales: concentrar los conceptos misionales en componentes aislados.<br>Los elementos realtados en verde en el diagrama incurren en una renta, bien sea, o por consumo de cómputo en la nube de Microsoft, o por el costo de una licencia de uso. Por ejemplo, en el caso del servidor de reporte del SUI Migrado, es requerida una licencia de uso Power BI Pro, de pago mensual.<br>||
 |**Servidor BDD App**|node|Sistema Operativo Windows Server 2019 Standard o Datacenter x64. RAM	8 GB. CPU 64 Bits, 4 Cores > 2 Ghz. Discos SO C: 126 GB, Backup E: 511 GB, SQL Data F: 510 GB, SQL Log   G: 510 GB, TempDB  G: 63.6 GB.<br>||
 |**Servidor BDD Config**|node|Sistema Operativo Windows Server 2019 Standard o Datacenter x64. RAM	8 GB. CPU 64 Bits, 4 Cores > 2 Ghz. Discos SO C: 80 GB, Backup E: 250 GB, SQL Data F: 250 GB, SQL Log G: 250 GB, TempDB  G: 30 GB.<br>||
 |**Servidor Web App**|node|Windows Server 2019 Standard o Datacenter x64. Nombre físico. IP LAN. IP Pública. Windows Server 2019 Standard or Datacenter x64. RAM 8  GB. CPU	64 Bits. 4 Cores de 2 Ghz. Discos SO C: 126 GB. SO D: 16 GB.<br>||
@@ -194,10 +194,10 @@ Relación de dependencias de infraestructura con los servicios que integran el m
 
 <br>
 
-## Lineabase.0.SIU Aplicación. Física
-![Vista. Lineabase.0.SIU Aplicación. Física](images/Lineabase.0.SIUAplicación.Física.png){#fig:Lineabase.0.SIUAplicación.Física width=}
+## Lineabase.0.SUI Aplicación. Física
+![Vista. Lineabase.0.SUI Aplicación. Física](images/Lineabase.0.SIUAplicación.Física.png){#fig:Lineabase.0.SIUAplicación.Física width=}
 
-Procuraduría General de la Nación (PGN), módulo SIU migrado, 2023. Elementos físicos que soportan a la aplicación Sistema de Información Único (SIU en adelante) de la PGN, actual Fase I y existente en Fase II. Presentación de componentes de software y tecnología física (hardware) implementados en la Fase I y requeridos por Fase II (presente proyecto).
+Procuraduría General de la Nación (PGN), módulo SUI migrado, 2023. Elementos físicos que soportan a la aplicación Sistema de Información Único (SUI en adelante) de la PGN, actual Fase I y existente en Fase II. Presentación de componentes de software y tecnología física (hardware) implementados en la Fase I y requeridos por Fase II (presente proyecto).
 
 ## Representación Arquitectónica
 Con una arquitectura orientada a servicios SUI recopila:
@@ -234,10 +234,10 @@ Con una arquitectura orientada a servicios SUI recopila:
 
 <br>
 
-## Seguridad.2. Lineabase.0.SIU Aplicación
-![Vista. Seguridad.2. Lineabase.0.SIU Aplicación](images/Seguridad.2.Lineabase.0.SIUAplicación.png){#fig:Seguridad.2.Lineabase.0.SIUAplicación width=}
+## Seguridad.2. Lineabase.0.SUI Aplicación
+![Vista. Seguridad.2. Lineabase.0.SUI Aplicación](images/Seguridad.2.Lineabase.0.SIUAplicación.png){#fig:Seguridad.2.Lineabase.0.SIUAplicación width=}
 
-## Metodología Seguridad SIU Migrado
+## Metodología Seguridad SUI Migrado
 Los mecanismos de autorización para el acceso a los sistemas de información de la Procuraduría General de la Nación describen la forma de cómo se restringe el acceso a los diferentes módulos Misionales (SIM), Registros de Inhabilidades (SIRI), Nómina, Control Interno y relatoría, entre otros, y que se considera un mecanismo de protección que ayuda a reaccionar ante cualquier operación no autorizada. 
 
 El control de acceso basado en roles (RBAC), enfoca la idea de que a los funcionarios se les otorgue los permisos de acceso a los recursos, basados en los roles y/o perfiles que este posee. Este control posee dos características fundamentales: i) los accesos son controlados por medio de los roles y/o perfiles asignados, quiere decir, a los servidores públicos, contratistas, terceros y otros colaboradores autorizados para interactuar con los sistemas de información se le asignan los roles y el encargado/responsable definirá los permisos, que a su vez están relacionados con los roles, ii) Los roles pueden ser definidos a nivel jerárquico, es decir que un rol podrá ser miembro de otro rol.  
@@ -413,10 +413,10 @@ Consideramos tres tipos datos: datos transaccionales, históricos y externos, y 
 \newpage
 
 # Documento sobre especificaciones técnicas de infraestructura TI
-## Lineabase.0.SIU Aplicación. Física
-![Vista. Lineabase.0.SIU Aplicación. Física](images/Lineabase.0.SIUAplicación.Física.png){#fig:Lineabase.0.SIUAplicación.Física width=}
+## Lineabase.0.SUI Aplicación. Física
+![Vista. Lineabase.0.SUI Aplicación. Física](images/Lineabase.0.SIUAplicación.Física.png){#fig:Lineabase.0.SIUAplicación.Física width=}
 
-Procuraduría General de la Nación (PGN), módulo SIU migrado, 2023. Elementos físicos que soportan a la aplicación Sistema de Información Único (SIU en adelante) de la PGN, actual Fase I y existente en Fase II. Presentación de componentes de software y tecnología física (hardware) implementados en la Fase I y requeridos por Fase II (presente proyecto).
+Procuraduría General de la Nación (PGN), módulo SUI migrado, 2023. Elementos físicos que soportan a la aplicación Sistema de Información Único (SUI en adelante) de la PGN, actual Fase I y existente en Fase II. Presentación de componentes de software y tecnología física (hardware) implementados en la Fase I y requeridos por Fase II (presente proyecto).
 
 ## Representación Arquitectónica
 Con una arquitectura orientada a servicios SUI recopila:
