--- a/content/02n.a4.pgnarqinfra.md
+++ b/content/02n.a4.pgnarqinfra.md
@@ -1,12 +1,12 @@
 # Arquitectura de Software: Infraestructura
 * [Diagrama de Infraestructura de TI](#diagrama-de-infraestructura-de-ti)
 	* [Migracion.3. Infraestructura](#migracion.3.-infraestructura)
-	* [Lineabase.1a.SUI Componentes. Infraestrcutura](#lineabase.1a.SUI-componentes.-infraestrcutura)
-	* [Lineabase.0.SUI Aplicación. Física](#lineabase.0.SUI-aplicación.-física)
-	* [Seguridad.2. Lineabase.0.SUI Aplicación](#seguridad.2.-lineabase.0.SUI-aplicación)
+	* [Lineabase.1a.SUI Componentes. Infraestrcutura](#lineabase.1a.sui-componentes.-infraestrcutura)
+	* [Lineabase.0.SUI Aplicación. Física](#lineabase.0.sui-aplicación.-física)
+	* [Seguridad.2. Lineabase.0.SUI Aplicación](#seguridad.2.-lineabase.0.sui-aplicación)
 	* [Migracion.6. Migración de datos](#migracion.6.-migración-de-datos)
 * [Documento sobre especificaciones técnicas de infraestructura TI](#documento-sobre-especificaciones-técnicas-de-infraestructura-ti)
-	* [Lineabase.0.SUI Aplicación. Física](#lineabase.0.SUI-aplicación.-física)
+	* [Lineabase.0.SUI Aplicación. Física](#lineabase.0.sui-aplicación.-física)
 
 
 <div style="page-break-before: always;"></div>
@@ -28,6 +28,45 @@ Identificación de los ítems de infraestructura tecnológica, nodos, redes, có
 1. Seguridad
 1. Almacenamiento
 1. Comunicación / Ruteo
+
+<br>
+
+### Especificaciones Plataformas y Versiones
+* Angular, versión 11
+* Node Js, versión 14.16
+* Net Entity Framework, versión 4.7
+* Sequelize, versión 5.3
+
+<br>
+
+### Especificaciones de Librerías y Dependencias
+
+* Web Server (IIS) role
+* Windows Process Activation Service feature
+* Microsoft .NET Framework version 3.5
+* Microsoft .NET Framework version 4.7.2
+* Microsoft SQL Server 2012 Service Pack 4 Native Client
+* Microsoft WCF Data Services 5.6
+* Microsoft Identity Extensions
+* Microsoft Information Protection and Control Client 2.1 (MSIPC)
+* Cumulative Update Package 7 for Microsoft AppFabric 1.1 for Windows Server (KB 3092423)
+* Visual C++ Redistributable Package for Visual Studio 2012
+* Visual C++ Redistributable Package for Visual Studio 2017
+
+<br>
+
+### Especificaciones Base de Servidores
+
+| Servidor de Aplicaciones | Especificaciones del Servidor            |
+|-------------------|-------------------------------------------------|
+| Sistema Operativo | Windows Server 2019 Standard or Datacenter x64  |
+| RAM               | 16 GB                                            |
+| CPU               | 64 Bits, mínimo 4 Cores > 2 Ghz                 |
+| Discos            | C: 120 GB, D: 16 GB    |    
+| Físico/virtual    | Virtual                                         |
+| Roles / Features  | Web Server (IIS) role                           |
+|                   | Windows Process Activation Service feature      |
+|                   | Microsoft .NET Framework version 3.5            |
 
 <br>
 
@@ -137,7 +176,7 @@ Identificación de los ítems de infraestructura tecnológica, nodos, redes, có
 <br>
 
 ## Lineabase.1a.SUI Componentes. Infraestrcutura
-![Vista. Lineabase.1a.SUI Componentes. Infraestrcutura](images/Lineabase.1a.SIUComponentes.Infraestrcutura.png){#fig:Lineabase.1a.SIUComponentes.Infraestrcutura width=}
+![Vista. Lineabase.1a.SUI Componentes. Infraestrcutura](images/Lineabase.1a.SUIComponentes.Infraestrcutura.png){#fig:Lineabase.1a.SUIComponentes.Infraestrcutura width=}
 
 Relación de dependencias de infraestructura con los servicios que integran el modelo de aplicación de SUI Migrado, 2023.
 
@@ -195,16 +234,54 @@ Relación de dependencias de infraestructura con los servicios que integran el m
 <br>
 
 ## Lineabase.0.SUI Aplicación. Física
-![Vista. Lineabase.0.SUI Aplicación. Física](images/Lineabase.0.SIUAplicación.Física.png){#fig:Lineabase.0.SIUAplicación.Física width=}
+![Vista. Lineabase.0.SUI Aplicación. Física](images/Lineabase.0.SUIAplicación.Física.png){#fig:Lineabase.0.SUIAplicación.Física width=}
 
-Procuraduría General de la Nación (PGN), módulo SUI migrado, 2023. Elementos físicos que soportan a la aplicación Sistema de Información Único (SUI en adelante) de la PGN, actual Fase I y existente en Fase II. Presentación de componentes de software y tecnología física (hardware) implementados en la Fase I y requeridos por Fase II (presente proyecto).
+Procuraduría General de la Nación (PGN), módulo $APLICATIVO, 2023. Elementos físicos que soportan a la aplicación doc $APLICATIVO de la PGN, actual Fase I y existente en Fase II. Presentación de componentes de software y tecnología física (hardware) implementados en la Fase I y requeridos por Fase II (presente proyecto).
 
-## Representación Arquitectónica
-Con una arquitectura orientada a servicios SUI recopila:
+### Representación de Arquitectura
+Con una arquitectura orientada a servicios $APLICATIVO recopila:
 
 1. Runtime: Es el servicio que interactúa con el usuario final (GUI) elaborado en Angular 11
 1. API Tx: Servicio API REST Base Node encargado de realizar las transacciones básicas CRUD
 1. API Config / Seguridad. Servicio Web API .Net Framework encargado de gestionar características con la autenticación y configuración
+
+<br>
+
+### Especificaciones Plataformas y Versiones
+* Angular, versión 11
+* Node Js, versión 14.16
+* Net Entity Framework, versión 4.7
+* Sequelize, versión 5.3
+
+<br>
+
+### Especificaciones de Librerías y Dependencias
+* Web Server (IIS) role
+* Windows Process Activation Service feature
+* Microsoft .NET Framework version 3.5
+* Microsoft .NET Framework version 4.7.2
+* Microsoft SQL Server 2012 Service Pack 4 Native Client
+* Microsoft WCF Data Services 5.6
+* Microsoft Identity Extensions
+* Microsoft Information Protection and Control Client 2.1 (MSIPC)
+* Cumulative Update Package 7 for Microsoft AppFabric 1.1 for Windows Server (KB 3092423)
+* Visual C++ Redistributable Package for Visual Studio 2012
+* Visual C++ Redistributable Package for Visual Studio 2017
+
+<br>
+
+### Especificaciones Base de Servidores
+
+| Servidor de Aplicaciones | Especificaciones del Servidor            |
+|-------------------|-------------------------------------------------|
+| Sistema Operativo | Windows Server 2019 Standard or Datacenter x64  |
+| RAM               | 16 GB                                            |
+| CPU               | 64 Bits, mínimo 4 Cores > 2 Ghz                 |
+| Discos            | C: 120 GB, D: 16 GB    |    
+| Físico/virtual    | Virtual                                         |
+| Roles / Features  | Web Server (IIS) role                           |
+|                   | Windows Process Activation Service feature      |
+|                   | Microsoft .NET Framework version 3.5            |
 
 <br>
 
@@ -235,9 +312,9 @@ Con una arquitectura orientada a servicios SUI recopila:
 <br>
 
 ## Seguridad.2. Lineabase.0.SUI Aplicación
-![Vista. Seguridad.2. Lineabase.0.SUI Aplicación](images/Seguridad.2.Lineabase.0.SIUAplicación.png){#fig:Seguridad.2.Lineabase.0.SIUAplicación width=}
+![Vista. Seguridad.2. Lineabase.0.SUI Aplicación](images/Seguridad.2.Lineabase.0.SUIAplicación.png){#fig:Seguridad.2.Lineabase.0.SUIAplicación width=}
 
-## Metodología Seguridad SUI Migrado
+## Metodología Seguridad $APLICATIVO
 Los mecanismos de autorización para el acceso a los sistemas de información de la Procuraduría General de la Nación describen la forma de cómo se restringe el acceso a los diferentes módulos Misionales (SIM), Registros de Inhabilidades (SIRI), Nómina, Control Interno y relatoría, entre otros, y que se considera un mecanismo de protección que ayuda a reaccionar ante cualquier operación no autorizada. 
 
 El control de acceso basado en roles (RBAC), enfoca la idea de que a los funcionarios se les otorgue los permisos de acceso a los recursos, basados en los roles y/o perfiles que este posee. Este control posee dos características fundamentales: i) los accesos son controlados por medio de los roles y/o perfiles asignados, quiere decir, a los servidores públicos, contratistas, terceros y otros colaboradores autorizados para interactuar con los sistemas de información se le asignan los roles y el encargado/responsable definirá los permisos, que a su vez están relacionados con los roles, ii) Los roles pueden ser definidos a nivel jerárquico, es decir que un rol podrá ser miembro de otro rol.  
@@ -254,7 +331,7 @@ Gestor de roles: La asignación de roles es sincronizada con la identidad de usu
 Para el gobierno y gestión de identidades y de acceso, se identificó como primera medida la implementación de la siguiente metodología. 
 
 ### Reglas de Creación de Usuarios e Identifiación de Privilegios
-En este ítem se deben identificar las herramientas con las que cuenta la    entidad, las cuales deberán ser registradas en el documento denominado: “Clasificación y gestión de usuarios, roles y perfiles.xlsx / Hoja_1 (Mecanismos)”. 
+En este ítem se deben identificar las herramientas con las que cuenta la  entidad, las cuales deberán ser registradas en el documento denominado: “Clasificación y gestión de usuarios, roles y perfiles.xlsx / Hoja_1 (Mecanismos)”. 
 Identificación de Roles y Privilegios. 
 
 Este ítem proporciona al sistema la definición de las políticas organizacionales en cuanto a la definición de los privilegios y roles de los diferentes actores en cada uno de los aplicativos con los que estos interactúan dentro de sus funciones, registradas en el documento denominado: “Clasificación y gestión de usuarios, roles y perfiles.xlsx / Hoja_2 (Roles)”. 
@@ -414,16 +491,54 @@ Consideramos tres tipos datos: datos transaccionales, históricos y externos, y 
 
 # Documento sobre especificaciones técnicas de infraestructura TI
 ## Lineabase.0.SUI Aplicación. Física
-![Vista. Lineabase.0.SUI Aplicación. Física](images/Lineabase.0.SIUAplicación.Física.png){#fig:Lineabase.0.SIUAplicación.Física width=}
+![Vista. Lineabase.0.SUI Aplicación. Física](images/Lineabase.0.SUIAplicación.Física.png){#fig:Lineabase.0.SUIAplicación.Física width=}
 
-Procuraduría General de la Nación (PGN), módulo SUI migrado, 2023. Elementos físicos que soportan a la aplicación Sistema de Información Único (SUI en adelante) de la PGN, actual Fase I y existente en Fase II. Presentación de componentes de software y tecnología física (hardware) implementados en la Fase I y requeridos por Fase II (presente proyecto).
+Procuraduría General de la Nación (PGN), módulo $APLICATIVO, 2023. Elementos físicos que soportan a la aplicación doc $APLICATIVO de la PGN, actual Fase I y existente en Fase II. Presentación de componentes de software y tecnología física (hardware) implementados en la Fase I y requeridos por Fase II (presente proyecto).
 
-## Representación Arquitectónica
-Con una arquitectura orientada a servicios SUI recopila:
+### Representación de Arquitectura
+Con una arquitectura orientada a servicios $APLICATIVO recopila:
 
 1. Runtime: Es el servicio que interactúa con el usuario final (GUI) elaborado en Angular 11
 1. API Tx: Servicio API REST Base Node encargado de realizar las transacciones básicas CRUD
 1. API Config / Seguridad. Servicio Web API .Net Framework encargado de gestionar características con la autenticación y configuración
+
+<br>
+
+### Especificaciones Plataformas y Versiones
+* Angular, versión 11
+* Node Js, versión 14.16
+* Net Entity Framework, versión 4.7
+* Sequelize, versión 5.3
+
+<br>
+
+### Especificaciones de Librerías y Dependencias
+* Web Server (IIS) role
+* Windows Process Activation Service feature
+* Microsoft .NET Framework version 3.5
+* Microsoft .NET Framework version 4.7.2
+* Microsoft SQL Server 2012 Service Pack 4 Native Client
+* Microsoft WCF Data Services 5.6
+* Microsoft Identity Extensions
+* Microsoft Information Protection and Control Client 2.1 (MSIPC)
+* Cumulative Update Package 7 for Microsoft AppFabric 1.1 for Windows Server (KB 3092423)
+* Visual C++ Redistributable Package for Visual Studio 2012
+* Visual C++ Redistributable Package for Visual Studio 2017
+
+<br>
+
+### Especificaciones Base de Servidores
+
+| Servidor de Aplicaciones | Especificaciones del Servidor            |
+|-------------------|-------------------------------------------------|
+| Sistema Operativo | Windows Server 2019 Standard or Datacenter x64  |
+| RAM               | 16 GB                                            |
+| CPU               | 64 Bits, mínimo 4 Cores > 2 Ghz                 |
+| Discos            | C: 120 GB, D: 16 GB    |    
+| Físico/virtual    | Virtual                                         |
+| Roles / Features  | Web Server (IIS) role                           |
+|                   | Windows Process Activation Service feature      |
+|                   | Microsoft .NET Framework version 3.5            |
 
 <br>
 
@@ -454,8 +569,4 @@ Con una arquitectura orientada a servicios SUI recopila:
 <br>
 
 
-<<<<<<< HEAD
-``Generated on: Tue Nov 28 2023 09:35:27 GMT-0500 (COT)``
-=======
-``Generated on: Thu Nov 23 2023 14:12:15 GMT-0500 (COT)``
->>>>>>> ae182796d07126970f6e991f2153eef174ea5137
+``Generated on: Tue Dec 05 2023 13:20:47 GMT-0500 (COT)``
